force-app/main/default/objects/Call_Line__c/fields/Chanel__c.field-meta.xml
<CustomField>
    <fullName>Chanel__c</fullName>
    <description>Chanel AGI</description>
    <label>Chanel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>