force-app/main/default/objects/Call_Line__c/fields/Change_of_Financial__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Financial__c</fullName>
    <label>Change of Financial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perubahan pendebetan dari Rek BM to Rek BM lain</fullName>
            </value>
            <value>
                <fullName>Perubahan pendebetan dari Rek BM to CC BM</fullName>
            </value>
            <value>
                <fullName>Perubahan pendebetan dari Rek BM to CC non BM</fullName>
            </value>
            <value>
                <fullName>Perubahan pendebetan dari CC BM to CC BM lain</fullName>
            </value>
            <value>
                <fullName>Perubahan pendebetan dari CC BM to Rek BM</fullName>
            </value>
            <value>
                <fullName>Perubahan pendebetan dari CC BM to CC non BM</fullName>
            </value>
            <value>
                <fullName>Perubahan pendebetan dari CC non BM to CC non BM lain</fullName>
            </value>
            <value>
                <fullName>Perubahan pendebetan dari CC non BM to Rek BM</fullName>
            </value>
            <value>
                <fullName>Perubahan pendebetan dari CC non BM to CC BM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>