force-app/main/default/objects/Call_Line__c/fields/Change_of_Non_Financal__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Non_Financal__c</fullName>
    <label>Change of Non Financal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>