force-app/main/default/objects/Call_Line__c/fields/Changes__c.field-meta.xml
<CustomField>
    <fullName>Changes__c</fullName>
    <label>Changes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>