force-app/main/default/objects/Call_Line__c/fields/Child_Count_Formula__c.field-meta.xml
<CustomField>
    <fullName>Child_Count_Formula__c</fullName>
    <formula>IF(Child_Count__c =null || Child_Count__c=0 || ISBLANK(Child_Count__c),1,Child_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Count (Formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>