force-app/main/default/objects/Call_Line__c/fields/Claim_Remark__c.field-meta.xml
<CustomField>
    <fullName>Claim_Remark__c</fullName>
    <label>Claim Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>