force-app/main/default/objects/Call_Line__c/fields/Collection_Call_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Collection_Call_Date_F__c</fullName>
    <formula>DATEVALUE(Collection_Call_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Call Date F</label>
    <type>Date</type>
</CustomField>