force-app/main/default/objects/Call_Line__c/fields/Collection_Target__c.field-meta.xml
<CustomField>
    <fullName>Collection_Target__c</fullName>
    <formula>IF(
TEXT(Call_List__r.Case_Type_Config__c) == &apos;Redemption TM&apos; &amp;&amp;
TEXT(Activity_Result__c) == &apos;Inforce&apos;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>