force-app/main/default/objects/Call_Line__c/fields/Contact_Policy_App__c.field-meta.xml
<CustomField>
    <fullName>Contact_Policy_App__c</fullName>
    <formula>Contact__r.PolicyApp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Policy App</label>
    <type>Text</type>
</CustomField>