force-app/main/default/objects/Call_Line__c/fields/Contacted_Number__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Number__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>