force-app/main/default/objects/Call_Line__c/fields/CORRESPONDENCETYPEID__c.field-meta.xml
<CustomField>
    <fullName>CORRESPONDENCETYPEID__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : E</inlineHelpText>
    <label>CORRESPONDENCETYPEID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>