force-app/main/default/objects/Call_Line__c/fields/Count_Agent_Validation__c.field-meta.xml
<CustomField>
    <fullName>Count_Agent_Validation__c</fullName>
    <formula>IF(ISPICKVAL(Jawaban_Agent_Validation__c, &apos;Tidak&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Agent Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>