force-app/main/default/objects/Call_Line__c/fields/Count_Blank_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_Blank_ALI__c</fullName>
    <formula>IF(
ISPICKVAL(Reason_Status_Config__c, &apos;&apos;), 1, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Blank ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>