force-app/main/default/objects/Call_Line__c/fields/Count_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Count_Contacted__c</fullName>
    <formula>IF( 
OR( ISPICKVAL(Activity_Result__c, &apos;Contacted&apos;), ISPICKVAL(Call_Status_Config__c, &apos;Contacted&apos;) ), 1, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>