force-app/main/default/objects/Call_Line__c/fields/Count_Data2__c.field-meta.xml
<CustomField>
    <fullName>Count_Data2__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>