force-app/main/default/objects/Call_Line__c/fields/Count_Data__c.field-meta.xml
<CustomField>
    <fullName>Count_Data__c</fullName>
    <formula>IF(TEXT(Reason_Status_Config__c) == &apos;No Follow Up&apos;,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Data Valid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>