force-app/main/default/objects/Call_Line__c/fields/Count_Eksternal_Error_Nama_PP_TT__c.field-meta.xml
<CustomField>
    <fullName>Count_Eksternal_Error_Nama_PP_TT__c</fullName>
    <formula>IF(ISPICKVAL(Error_Nama_PP_TT__c, &apos;Eksternal&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Eksternal Error (Nama PP &amp; TT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>