force-app/main/default/objects/Call_Line__c/fields/Count_Follow_Up_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_Follow_Up_ALI__c</fullName>
    <formula>IF(
AND( ISPICKVAL(Reason_Status_Config__c, &apos;Follow Up&apos;), ISPICKVAL(Call_Status_Config__c, &apos;Contacted&apos;) ), 1, 0
)</formula>
    <label>Count Follow Up ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>