force-app/main/default/objects/Call_Line__c/fields/Count_Internal_Error_Telepon__c.field-meta.xml
<CustomField>
    <fullName>Count_Internal_Error_Telepon__c</fullName>
    <formula>IF(ISPICKVAL(Error_Telepon__c, &apos;Internal&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Internal Error (Telepon)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>