force-app/main/default/objects/Call_Line__c/fields/Count_Keterangan_Data_KYC__c.field-meta.xml
<CustomField>
    <fullName>Count_Keterangan_Data_KYC__c</fullName>
    <formula>IF( OR(ISPICKVAL(Jawaban_Nama_PP_TT__c, &apos;Tidak&apos;), ISPICKVAL(Jawaban_DOB__c, &apos;Tidak&apos;), ISPICKVAL(Jawaban_Alamat__c, &apos;Tidak&apos;), ISPICKVAL(Jawaban_Telepon__c, &apos;Tidak&apos;), ISPICKVAL(Jawaban_Email__c, &apos;Tidak&apos;)) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Keterangan Data KYC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>