force-app/main/default/objects/Call_Line__c/fields/Count_No_Pickup_Mailbox_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_No_Pickup_Mailbox_ALI__c</fullName>
    <formula>IF(
AND( ISPICKVAL(Reason_Status_Config__c, &apos;No Pickup/ Mailbox&apos;), ISPICKVAL(Call_Status_Config__c, &apos;Uncontacted&apos;) ), 1, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count No Pickup/Mailbox ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>