force-app/main/default/objects/Call_Line__c/fields/Count_Redemption__c.field-meta.xml
<CustomField>
    <fullName>Count_Redemption__c</fullName>
    <formula>if(ISPICKVAL( Case_Type_Config__c , &apos;Retain Redemption&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Redemption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>