force-app/main/default/objects/Call_Line__c/fields/Count_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Count_Scheduled_Date__c</fullName>
    <formula>(WelcomeCall_Schedule_Date__c - Now())* 24</formula>
    <label>Count Scheduled Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>