force-app/main/default/objects/Call_Line__c/fields/Count_Uncontacted__c.field-meta.xml
<CustomField>
    <fullName>Count_Uncontacted__c</fullName>
    <formula>IF(
OR( ISPICKVAL(Activity_Result__c, &apos;Uncontacted&apos;), ISPICKVAL(Call_Status_Config__c, &apos;Uncontacted&apos;) ), 1, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Uncontacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>