force-app/main/default/objects/Call_Line__c/fields/Count_Understand_Product__c.field-meta.xml
<CustomField>
    <fullName>Count_Understand_Product__c</fullName>
    <formula>IF(ISPICKVAL(Jawaban_Understand_Product__c, &apos;Tidak&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Understand Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>