force-app/main/default/objects/Call_Line__c/fields/Count_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Count_Withdrawal__c</fullName>
    <formula>if(ISPICKVAL( Case_Type_Config__c , &apos;Retain Withdrawal&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Withdrawal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>