force-app/main/default/objects/Call_Line__c/fields/Count_Wrong_Number_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_Wrong_Number_ALI__c</fullName>
    <formula>IF(
AND( ISPICKVAL( Reason_Status_Config__c , &apos;ALI - Wrong Number&apos;), ISPICKVAL(Call_Status_Config__c, &apos;Invalid Number&apos;) ), 1, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Wrong Number ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>