force-app/main/default/objects/Call_Line__c/fields/Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segmentation__c</fullName>
    <formula>TEXT(Contact__r.Cust_Segmentation__c)</formula>
    <label>Customer Segmentation</label>
    <type>Text</type>
</CustomField>