force-app/main/default/objects/Call_Line__c/fields/Data_Salah__c.field-meta.xml
<CustomField>
    <fullName>Data_Salah__c</fullName>
    <formula>Contact__r.LastName !=  Name_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Salah</label>
    <type>Checkbox</type>
</CustomField>