force-app/main/default/objects/Call_Line__c/fields/Date_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Date_Reschedule__c</fullName>
    <label>Date Reschedule</label>
    <type>Date</type>
</CustomField>