force-app/main/default/objects/Call_Line__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date &amp; Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>