force-app/main/default/objects/Call_Line__c/fields/Date_When_Customer_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_When_Customer_Call__c</fullName>
    <description>The date when customer call to AXA and available to be called back</description>
    <inlineHelpText>The date when customer call to AXA and available to be called back</inlineHelpText>
    <label>Date When Customer Call</label>
    <type>Date</type>
</CustomField>