force-app/main/default/objects/Call_Line__c/fields/delivereddate__c.field-meta.xml
<CustomField>
    <fullName>delivereddate__c</fullName>
    <label>delivereddate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>