force-app/main/default/objects/Call_Line__c/fields/Email_upload__c.field-meta.xml
<CustomField>
    <fullName>Email_upload__c</fullName>
    <label>Email (upload)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>