force-app/main/default/objects/Call_Line__c/fields/Emoticon__c.field-meta.xml
<CustomField>
    <fullName>Emoticon__c</fullName>
    <formula>Contact__r.Emoticon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emoticon</label>
    <type>Text</type>
</CustomField>