force-app/main/default/objects/Call_Line__c/fields/endCall__c.field-meta.xml
<CustomField>
    <fullName>endCall__c</fullName>
    <formula>WelcomeCall_Schedule_Date__c + ( VALUE( $Label.Welcome_Call_Schedule_Duration )/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>endCall</label>
    <type>DateTime</type>
</CustomField>