force-app/main/default/objects/Call_Line__c/fields/Error_Alamat__c.field-meta.xml
<CustomField>
    <fullName>Error_Alamat__c</fullName>
    <label>Error (Alamat)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Eksternal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>